--- a/src/Components/TableCards/style.module.css
+++ b/src/Components/TableCards/style.module.css
@@ -12,28 +12,21 @@ div#main {
         border-radius: 2vh;
         margin-bottom: 2vh;
     }
-div#tableCards {
-    gap: 5vh 5vh;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    div.blockTable {
-        background-color: #cf9898;
+    nav#nav {
+        font-size: 3vh;
+        background-color: cadetblue;
+        display: flex;
+        justify-content: space-around;
+        width: 120vh;
         border-radius: 5vh;
-        img {
-            margin: 5vh 5vh 0vh 5vh;
-            border: 0.5vh solid ;
-            height: 20vh;
-            width: 20vh;
-        }
-        h1 {
-            font-size: 2.5vh;
-            text-align: center;
-            font-family: sans-serif;
+        margin-bottom: 2vh;
+        p {
+            background-color: green;
+            border-radius: 5vh;
+            padding: 1vh;
+            border: 0.1vh solid black;
         }
     }
-}
+
 }
 
-div.lickDeleteFavorite {
-    background-color: #cf9898;
-}
